# eop-parser

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  plot_compare.py  plot_test.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/workflows/: build-test-main-pr.yml  build-test-main.yml  build-test-release.yml  build-test.yml
include/: CelesTrakEop.h  eop_defs.h  sdp_defs.h
include/utils/: TableInterpolator.h  datestr_to_ymd.h  print.h  ymd_to_mjd.h
scripts/: build-debug.sh  build-release.sh  run-clang-tidy.sh  run-cppcheck.sh
src/: CelesTrakEop.cpp
src/utils/: datestr_to_ymd.cpp  ymd_to_mjd.cpp
test/: CMakeLists.txt  CelesTrakEop_test.cpp  parser_test.cpp
test/data/: celestrak_1yr_1mo.csv  celestrak_error.csv  celestrak_float_typo.csv  celestrak_short.csv  simple.csv
test/utils/: datestr_to_ymd_test.cpp  ymd_to_mjd_test.cpp
